--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A discord bot for taking action against spam on discord community servers.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "doc": "jsdoc -c jsdoc.json"
   },
   "author": "Dom#0107 Discord",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "dotenv": "^14.3.2",
     "hjson": "^3.2.2",
     "redux": "^4.1.2"
+  },
+  "devDependencies": {
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.6.10"
   }
 }
