--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/hjson": "^2.4.3",
     "@types/node": "^17.0.17",
     "ink-docstrap": "^1.3.2",
+    "jest": "^27.5.1",
     "jsdoc": "^3.6.10",
     "ts-node": "^10.5.0",
     "typedoc": "^0.22.11"
